--- a/btcpay-server/umbrel-app.yml
+++ b/btcpay-server/umbrel-app.yml
@@ -1,6 +1,6 @@
 manifestVersion: 1
 id: btcpay-server
-category: Finance
+category: Development
 name: BTCPay Server
 version: "1.7.12"
 tagline: Accept Bitcoin payments with 0 fees & no 3rd party
