--- a/btcpay-server/umbrel-app.yml
+++ b/btcpay-server/umbrel-app.yml
@@ -3,6 +3,7 @@ id: btcpay-server
 category: Development
 name: BTCPay Server
 version: "1.7.12"
+icon: https://svgur.com/i/mvA.svg
 tagline: Accept Bitcoin payments with 0 fees & no 3rd party
 description: >-
   BTCPay Server is a payment processor that allows you to receive
