--- a/btcpay-server/docker-compose.yml
+++ b/btcpay-server/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.7"
 services:
   app_proxy:
     environment:
-      APP_HOST: btcpay-server_web_1
+      APP_HOST: sparkles-btcpay-server_web_1
       APP_PORT: 3003
       PROXY_AUTH_ADD: "false"
 
