--- a/sparkles-hello-worldt/umbrel-app.yml
+++ b/sparkles-hello-worldt/umbrel-app.yml
@@ -1,5 +1,5 @@
 manifestVersion: 1
-id: sparkles-hello-worldt
+id: sparkles-test
 name: Hello World 2
 tagline: Replace this tagline with your app's tagline
 icon: https://svgur.com/i/mvA.svg
